added grids to catalog, index and product pages, additional styling done, added editorconfig file

--- a/catalog.html
+++ b/catalog.html
@@ -17,10 +17,12 @@
 <body class="page-body inner-page">
 
 <header class="main-header">
-    <nav class="main-navigation container">
-        <a class="main-header-logo" href="index.html">
-            <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
-        </a>
+    <nav class="main-navigation">
+        <div class="main-header-bar">
+        <div class="main-navigation-wrapper">
+            <a class="main-header-logo" href="index.html">
+                <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
+            </a>
         <ul class="site-navigation">
             <li>
                 <a href="blank.html">About</a>
@@ -40,6 +42,8 @@
         </ul>
         <div class="user-navigation">
             <a class="login-link" href="blank.html">Log In</a>
+        </div>
+        </div>
         </div>
     </nav>
 </header>
@@ -201,6 +205,7 @@
 </main>
 
 <footer class="main-footer">
+    <div class="container">
     <section class="footer-contacts">
         <h2>Our location</h2>
         <p>
@@ -228,6 +233,7 @@
         Design by:
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
     </p>
+    </div>
 </footer>
 
 <section class="modal modal-login">
