--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 </main>
 
 <footer class="main-footer">
+    <div class="container">
     <section class="footer-contacts">
         <h2>Our location</h2>
         <p>
@@ -161,6 +162,7 @@
         Design by:
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
     </p>
+    </div>
 </footer>
 
 <section class="modal modal-login">
