--- a/product.html
+++ b/product.html
@@ -17,34 +17,38 @@
 <body class="page-body inner-page">
 
 <header class="main-header">
-    <nav class="main-navigation container">
-        <a class="main-header-logo" href="index.html">
-            <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
-        </a>
-        <ul class="site-navigation">
-            <li>
-                <a href="blank.html">About</a>
-            </li>
-            <li>
-                <a href="blank.html">News</a>
-            </li>
-            <li>
-                <a href="pricing.html">Pricing</a>
-            </li>
-            <li class="site-navigation-current">
-                <a href="catalog.html">Store</a>
-            </li>
-            <li>
-                <a href="blank.html">Contacts</a>
-            </li>
-        </ul>
-        <div class="user-navigation">
-            <a class="login-link" href="blank.html">Log In</a>
+    <nav class="main-navigation">
+        <div class="main-header-bar">
+            <div class="main-navigation-wrapper">
+                <a class="main-header-logo" href="index.html">
+                    <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
+                </a>
+                <ul class="site-navigation">
+                    <li>
+                        <a href="blank.html">About</a>
+                    </li>
+                    <li>
+                        <a href="blank.html">News</a>
+                    </li>
+                    <li>
+                        <a href="pricing.html">Pricing</a>
+                    </li>
+                    <li class="site-navigation-current">
+                        <a href="catalog.html">Store</a>
+                    </li>
+                    <li>
+                        <a href="blank.html">Contacts</a>
+                    </li>
+                </ul>
+                <div class="user-navigation">
+                    <a class="login-link" href="blank.html">Log In</a>
+                </div>
+            </div>
         </div>
     </nav>
 </header>
 
-<main class="page-catalog container">
+<main class="page-product container">
 
     <h1 class="page-title">Travel Kit "Baxter of California"</h1>
 
@@ -91,40 +95,42 @@
                 <li>60ml After Shave Balm</li>
                 <li>60ml Super Close Shave Formula</li>
                 <li>60ml Daily Protein Shampoo</li>
-                <li>Dopp Wash Bag</li>
+<li>Dopp Wash Bag</li>
             </ul>
         </div>
     </section>
 </main>
 
-<footer class="main-footer">
-    <section class="footer-contacts">
-        <h2>Our location</h2>
-        <p>
-            Barbershop Borodinski <br>
-            Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
-            <a class="footer-address" href="blank.html">Directions</a><br>
-            Phone: <a class="footer-phone" href="tel:+17348957190">+1 734-895-7190</a>
+<footer class="page-footer main-footer">
+    <div class="container">
+        <section class="footer-contacts">
+            <h2>Our location</h2>
+            <p>
+                Barbershop Borodinski <br>
+                Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
+                <a class="footer-address" href="blank.html">Directions</a><br>
+                Phone: <a class="footer-phone" href="tel:+17348957190">+1 734-895-7190</a>
+            </p>
+        </section>
+        <section class="footer-social-media">
+            <h2>Let's be friends!</h2>
+            <ul>
+                <li>
+                    <a class="social-button" href="#">VK</a>
+                </li>
+                <li>
+                    <a class="social-button" href="#">Facebook</a>
+                </li>
+                <li>
+                    <a class="social-button" href="#">Instagram</a>
+                </li>
+            </ul>
+        </section>
+        <p class="footer-copyright">
+            Design by:
+            <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
         </p>
-    </section>
-    <section class="footer-social-media">
-        <h2>Let's be friends!</h2>
-        <ul>
-            <li>
-                <a class="social-button" href="#">VK</a>
-            </li>
-            <li>
-                <a class="social-button" href="#">Facebook</a>
-            </li>
-            <li>
-                <a class="social-button" href="#">Instagram</a>
-            </li>
-        </ul>
-    </section>
-    <p class="footer-copyright">
-        Design by:
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-    </p>
+    </div>
 </footer>
 
 <section class="modal modal-login">
