--- a/catalog.html
+++ b/catalog.html
@@ -17,12 +17,10 @@
 <body class="page-body inner-page">
 
 <header class="main-header">
-    <nav class="main-navigation">
-        <div class="main-header-bar">
-        <div class="main-navigation-wrapper">
-            <a class="main-header-logo" href="index.html">
-                <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
-            </a>
+    <nav class="main-navigation container">
+        <a class="main-header-logo" href="index.html">
+            <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
+        </a>
         <ul class="site-navigation">
             <li>
                 <a href="blank.html">About</a>
@@ -43,8 +41,6 @@
         <div class="user-navigation">
             <a class="login-link" href="blank.html">Log In</a>
         </div>
-        </div>
-        </div>
     </nav>
 </header>
 
@@ -56,33 +52,33 @@
         <li class="breadcrumbs-current">Aftercare Products</li>
     </ul>
     <section class="filters">
-        <h2>Filters</h2>
+        <h2 class="visually-hidden">Filters</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
             <fieldset>
                 <legend>Brand:</legend>
                 <ul>
                     <li class="filter-option filter-checkbox">
-                        <input class="filter-input-checkbox filter-input" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
                         <label for="filter-baxter-of-california">Baxter of California</label>
                     </li>
                     <li class="filter-option filter-checkbox">
-                        <input class="filter-input-checkbox filter-input" type="checkbox" name="mr-natty" id="filter-mr-natty">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="mr-natty" id="filter-mr-natty">
                         <label for="filter-mr-natty">Mr Natty</label>
                     </li>
                     <li class="filter-option filter-checkbox">
-                        <input class="filter-input-checkbox filter-input" type="checkbox" name="suavecito" id="filter-suavecito" checked>
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="suavecito" id="filter-suavecito" checked>
                         <label for="filter-suavecito">Suavecito</label>
                     </li>
                     <li class="filter-option filter-checkbox">
-                        <input class="filter-input-checkbox filter-input" type="checkbox" name="malin-goetz" id="filter-malin-goetz">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="malin-goetz" id="filter-malin-goetz">
                         <label for="filter-malin-goetz">Malin+Goetz</label>
                     </li>
                     <li class="filter-option filter-checkbox">
-                        <input class="filter-input-checkbox filter-input" type="checkbox" name="murrays" id="filter-murrays">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="murrays" id="filter-murrays">
                         <label for="filter-murrays">Murray’s</label>
                     </li>
                     <li class="filter-option filter-checkbox">
-                        <input class="filter-input-checkbox filter-input" type="checkbox" name="american-crew" id="filter-american-crew" checked>
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="american-crew" id="filter-american-crew" checked>
                         <label for="filter-american-crew">American Crew</label>
                     </li>
                 </ul>
@@ -91,25 +87,25 @@
                 <legend>Category:</legend>
                 <ul>
                     <li class="filter-option filter-radio">
-                        <input class="filter-input-radio filter-input" type="radio" name="product-category" id="filter-shave" value="shave">
+                        <input class="visually-hidden filter-input-radio filter-input" type="radio" name="product-category" id="filter-shave" value="shave">
                         <label for="filter-shave">Shave</label>
                     </li>
                     <li class="filter-option filter-radio">
-                        <input class="filter-input-radio filter-input" type="radio" name="product-category" id="filter-care" value="hair-care" checked>
+                        <input class="visually-hidden filter-input-radio filter-input" type="radio" name="product-category" id="filter-care" value="hair-care" checked>
                         <label for="filter-care">Hair Care</label>
                     </li>
                     <li class="filter-option filter-radio">
-                        <input class="filter-input-radio filter-input" type="radio" name="product-category" id="filter-accessories" value="accessories">
+                        <input class="visually-hidden filter-input-radio filter-input" type="radio" name="product-category" id="filter-accessories" value="accessories">
                         <label for="filter-accessories">Accessories</label>
                     </li>
                 </ul>
             </fieldset>
-            <button type="submit">Apply</button>
+            <button type="submit" class="filter-button button">Apply</button>
         </form>
     </section>
 
     <section class="catalog">
-        <h2>List of aftercare items</h2>
+        <h2 class="visually-hidden">List of aftercare items</h2>
         <ul class="catalog-list">
             <li class="catalog-item">
                 <a href="product.html">
@@ -126,64 +122,64 @@
                     <button class="button" type="button">Buy now</button>
                 </p>
             </li>
-            <li>
+            <li class="catalog-item">
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
-                    <p>
+                    <p class="catalog-item-image">
                         <img src="images/product-2.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
-                <p>
-                    $29.99
-                    <button type="button">Buy now</button>
+                <p class="catalog-item-price">
+                    <b>$29.99</b>
+                    <button class="button" type="button">Buy now</button>
                 </p>
             </li>
-            <li>
+            <li class="catalog-item">
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
-                    <p>
+                    <p class="catalog-item-image">
                         <img src="images/product-3.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
-                <p>
-                    $29.99
-                    <button type="button">Buy now</button>
+                <p class="catalog-item-price">
+                    <b>$29.99</b>
+                    <button class="button" type="button">Buy now</button>
                 </p>
             </li>
-            <li>
+            <li class="catalog-item">
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
-                    <p>
+                    <p class="catalog-item-image">
                         <img src="images/product-4.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
-                <p>
-                    $29.99
-                    <button type="button">Buy now</button>
+                <p class="catalog-item-price">
+                    <b>$29.99</b>
+                    <button class="button" type="button">Buy now</button>
                 </p>
             </li>
-            <li>
+            <li class="catalog-item">
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
-                    <p>
+                    <p class="catalog-item-image">
                         <img src="images/product-5.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
-                <p>
-                    $29.99
-                    <button type="button">Buy now</button>
+                <p class="catalog-item-price">
+                    <b>$29.99</b>
+                    <button class="button" type="button">Buy now</button>
                 </p>
             </li>
-            <li>
+            <li class="catalog-item">
                 <a href="product.html">
                     <h3>Travel Kit "Baxter of California"</h3>
-                    <p>
+                    <p class="catalog-item-image">
                         <img src="images/product-6.jpg" width="220" height="165" alt="Travel kit Baxter of California">
                     </p>
                 </a>
-                <p>
-                    $29.99
-                    <button type="button">Add to cart</button>
+                <p class="catalog-item-price">
+                    <b>$29.99</b>
+                    <button class="button" type="button">Buy now</button>
                 </p>
             </li>
         </ul>
@@ -221,24 +217,36 @@
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">VK</span>
-                        <svg width="27" height="16" viewBox="0 0 128 76"><path d="M125,5.15c.89-3,0-5.15-4.23-5.15h-14a6,6,0,0,0-6.09,4S93.59,21.31,83.5,32.59c-3.26,3.26-4.74,4.3-6.52,4.3-.89,0-2.18-1-2.18-4V5.15c0-3.56-1-5.15-4-5.15h-22a3.37,3.37,0,0,0-3.56,3.22c0,3.37,5,4.15,5.56,13.64V37.48c0,4.52-.82,5.34-2.6,5.34-4.74,0-16.29-17.43-23.13-37.38C23.72,1.57,22.38,0,18.8,0H4.8C.8,0,0,1.88,0,4c0,3.71,4.75,22.1,22.1,46.42C33.67,67,50,76,64.8,76c8.9,0,10-2,10-5.45V58c0-4,.84-4.8,3.66-4.8,2.08,0,5.64,1,13.94,9C101.9,71.74,103.46,76,108.8,76h14c4,0,6-2,4.85-6s-5.8-9.64-11.81-16.4c-3.27-3.86-8.16-8-9.64-10.09-2.08-2.67-1.49-3.86,0-6.23,0,0,17-24,18.83-32.18Z" fill="#fff"/></svg>
+                        <svg width="27" height="16" viewBox="0 0 128 76">
+                            <path
+                                d="M125,5.15c.89-3,0-5.15-4.23-5.15h-14a6,6,0,0,0-6.09,4S93.59,21.31,83.5,32.59c-3.26,3.26-4.74,4.3-6.52,4.3-.89,0-2.18-1-2.18-4V5.15c0-3.56-1-5.15-4-5.15h-22a3.37,3.37,0,0,0-3.56,3.22c0,3.37,5,4.15,5.56,13.64V37.48c0,4.52-.82,5.34-2.6,5.34-4.74,0-16.29-17.43-23.13-37.38C23.72,1.57,22.38,0,18.8,0H4.8C.8,0,0,1.88,0,4c0,3.71,4.75,22.1,22.1,46.42C33.67,67,50,76,64.8,76c8.9,0,10-2,10-5.45V58c0-4,.84-4.8,3.66-4.8,2.08,0,5.64,1,13.94,9C101.9,71.74,103.46,76,108.8,76h14c4,0,6-2,4.85-6s-5.8-9.64-11.81-16.4c-3.27-3.86-8.16-8-9.64-10.09-2.08-2.67-1.49-3.86,0-6.23,0,0,17-24,18.83-32.18Z"
+                                fill="#fff"/>
+                        </svg>
                     </a>
                 </li>
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">Facebook</span>
-                        <svg width="19" height="22" viewBox="0 0 10.15 21.74"><path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/></svg>
+                        <svg width="19" height="22" viewBox="0 0 10.15 21.74">
+                            <path
+                                d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z"
+                                fill="#fff"/>
+                        </svg>
                     </a>
                 </li>
                 <li>
                     <a class="social-button" href="#"><span class="visually-hidden">Instagram</span>
-                        <svg width="20" height="20" viewBox="0 0 20 20"><path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"/></svg>
+                        <svg width="20" height="20" viewBox="0 0 20 20">
+                            <path
+                                d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z"
+                                fill="#fff"/>
+                        </svg>
                     </a>
                 </li>
             </ul>
         </section>
         <p class="footer-copyright">
-            Design by:
+            <b>Design by:</b>
             <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
         </p>
     </div>
@@ -250,17 +258,22 @@
         Enter your login and password below
     </p>
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-        <label for="login-login">Login</label>
-        <input class="login-icon-user" id="login-login" type="email" name="name" placeholder="email@example.com">
-
-        <label for="login-password">Password</label>
-        <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="*******">
-
-        <label class="login-checkbox">
-            <input type="checkbox" name="remember">
-            Remember me
-        </label>
-        <a class="restore" href="#">Forgot your password?</a>
+        <p>
+            <label class="visually-hidden" for="login-login">Login</label>
+            <input class="login-icon-user" id="login-login" type="email" name="name" placeholder="email@example.com">
+        </p>
+        <p>
+            <label class="visually-hidden" for="login-password">Password</label>
+            <input class="login-icon-password" id="login-password" type="password" name="password"
+                   placeholder="*******">
+        </p>
+        <p class="login-help">
+            <label class="login-checkbox">
+                <input class="visually-hidden" type="checkbox" name="remember">
+                Remember me
+            </label>
+            <a class="restore" href="#">Forgot your password?</a>
+        </p>
         <button class="button" type="submit">Log In</button>
     </form>
     <button class="modal-close" type="button">Close</button>
