--- a/blank.html
+++ b/blank.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Product - Barbershop "Borodinski"</title>
+    <title>Barbershop "Borodinski"</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
     <link rel="icon" href="images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+          rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="page-body inner-page">
 
-<header>
-    <nav>
-        <a href="index.html"><img src="images/logo.svg" alt="logo of borodinski barbershop" width="371" height="155"></a>
-        <ul>
+<header class="main-header">
+    <nav class="main-navigation container">
+        <a class="main-header-logo" href="index.html">
+            <img src="images/logo.svg" alt="logo of borodinski barbershop" width="111" height="24">
+        </a>
+        <ul class="site-navigation">
             <li>
                 <a href="blank.html">About</a>
             </li>
@@ -29,18 +32,20 @@
             <li>
                 <a href="pricelist.html">Pricing</a>
             </li>
-            <li>
+            <li class="site-navigation-current">
                 <a href="catalog.html">Store</a>
             </li>
             <li>
                 <a href="blank.html">Contacts</a>
             </li>
         </ul>
-        <a href="blank.html">Log In</a>
+        <div class="user-navigation">
+            <a class="login-link" href="blank.html">Log In</a>
+        </div>
     </nav>
 </header>
 
-<main>
+<main class="page-blank container">
 
 </main>
 
@@ -61,24 +66,36 @@
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">VK</span>
-                        <svg width="27" height="16" viewBox="0 0 128 76"><path d="M125,5.15c.89-3,0-5.15-4.23-5.15h-14a6,6,0,0,0-6.09,4S93.59,21.31,83.5,32.59c-3.26,3.26-4.74,4.3-6.52,4.3-.89,0-2.18-1-2.18-4V5.15c0-3.56-1-5.15-4-5.15h-22a3.37,3.37,0,0,0-3.56,3.22c0,3.37,5,4.15,5.56,13.64V37.48c0,4.52-.82,5.34-2.6,5.34-4.74,0-16.29-17.43-23.13-37.38C23.72,1.57,22.38,0,18.8,0H4.8C.8,0,0,1.88,0,4c0,3.71,4.75,22.1,22.1,46.42C33.67,67,50,76,64.8,76c8.9,0,10-2,10-5.45V58c0-4,.84-4.8,3.66-4.8,2.08,0,5.64,1,13.94,9C101.9,71.74,103.46,76,108.8,76h14c4,0,6-2,4.85-6s-5.8-9.64-11.81-16.4c-3.27-3.86-8.16-8-9.64-10.09-2.08-2.67-1.49-3.86,0-6.23,0,0,17-24,18.83-32.18Z" fill="#fff"/></svg>
+                        <svg width="27" height="16" viewBox="0 0 128 76">
+                            <path
+                                d="M125,5.15c.89-3,0-5.15-4.23-5.15h-14a6,6,0,0,0-6.09,4S93.59,21.31,83.5,32.59c-3.26,3.26-4.74,4.3-6.52,4.3-.89,0-2.18-1-2.18-4V5.15c0-3.56-1-5.15-4-5.15h-22a3.37,3.37,0,0,0-3.56,3.22c0,3.37,5,4.15,5.56,13.64V37.48c0,4.52-.82,5.34-2.6,5.34-4.74,0-16.29-17.43-23.13-37.38C23.72,1.57,22.38,0,18.8,0H4.8C.8,0,0,1.88,0,4c0,3.71,4.75,22.1,22.1,46.42C33.67,67,50,76,64.8,76c8.9,0,10-2,10-5.45V58c0-4,.84-4.8,3.66-4.8,2.08,0,5.64,1,13.94,9C101.9,71.74,103.46,76,108.8,76h14c4,0,6-2,4.85-6s-5.8-9.64-11.81-16.4c-3.27-3.86-8.16-8-9.64-10.09-2.08-2.67-1.49-3.86,0-6.23,0,0,17-24,18.83-32.18Z"
+                                fill="#fff"/>
+                        </svg>
                     </a>
                 </li>
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">Facebook</span>
-                        <svg width="19" height="22" viewBox="0 0 10.15 21.74"><path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/></svg>
+                        <svg width="19" height="22" viewBox="0 0 10.15 21.74">
+                            <path
+                                d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z"
+                                fill="#fff"/>
+                        </svg>
                     </a>
                 </li>
                 <li>
                     <a class="social-button" href="#"><span class="visually-hidden">Instagram</span>
-                        <svg width="20" height="20" viewBox="0 0 20 20"><path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff"/></svg>
+                        <svg width="20" height="20" viewBox="0 0 20 20">
+                            <path
+                                d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z"
+                                fill="#fff"/>
+                        </svg>
                     </a>
                 </li>
             </ul>
         </section>
         <p class="footer-copyright">
-            Design by:
+            <b>Design by:</b>
             <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
         </p>
     </div>
@@ -90,17 +107,22 @@
         Enter your login and password below
     </p>
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-        <label for="login-login">Login</label>
-        <input class="login-icon-user" id="login-login" type="email" name="name" placeholder="email@example.com">
-
-        <label for="login-password">Password</label>
-        <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="*******">
-
-        <label class="login-checkbox">
-            <input type="checkbox" name="remember">
-            Remember me
-        </label>
-        <a class="restore" href="#">Forgot your password?</a>
+        <p>
+            <label class="visually-hidden" for="login-login">Login</label>
+            <input class="login-icon-user" id="login-login" type="email" name="name" placeholder="email@example.com">
+        </p>
+        <p>
+            <label class="visually-hidden" for="login-password">Password</label>
+            <input class="login-icon-password" id="login-password" type="password" name="password"
+                   placeholder="*******">
+        </p>
+        <p class="login-help">
+            <label class="login-checkbox">
+                <input class="visually-hidden" type="checkbox" name="remember">
+                Remember me
+            </label>
+            <a class="restore" href="#">Forgot your password?</a>
+        </p>
         <button class="button" type="submit">Log In</button>
     </form>
     <button class="modal-close" type="button">Close</button>
