finished modals styling and renamed manifest file

--- a/blank.html
+++ b/blank.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
     <link rel="icon" href="images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
