--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16">
     <link rel="icon" href="images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -231,12 +231,12 @@
         </p>
         <button class="button" type="submit">Log In</button>
     </form>
-    <button class="modal-close" type="button">Close</button>
+    <button class="modal-close" type="button" aria-label="Close"></button>
 </section>
 <section class="modal modal-map">
-    <h2>Directions</h2>
-    <!--    map is going to be here-->
-    <button class="modal-close" type="button">Close</button>
+    <h2 class="visually-hidden">Directions</h2>
+    <img src="images/map.png" width="766" height="560" alt="">
+    <button class="modal-close" type="button" aria-label="Close"></button>
 </section>
 
 </body>
