--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 Monday-Friday: 9AM-6PM <br>
                 Saturday-Sunday: 10AM-5PM
             </p>
-            <a class="button" href="#">Navigate</a>
+            <a class="button contacts-button-map" href="#">Navigate</a>
             <a class="button" href="#">Call us</a>
         </section>
 
@@ -162,7 +162,7 @@
             <p>
                 Barbershop Borodinski <br>
                 Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
-                <a class="footer-address" href="blank.html">Directions</a><br>
+                <a class="footer-address contacts-button-map" href="blank.html">Directions</a><br>
                 Phone: <a class="footer-phone" href="tel:+17348957190">+1 734-895-7190</a>
             </p>
         </section>
@@ -238,6 +238,9 @@
     <img src="images/map.png" width="766" height="560" alt="">
     <button class="modal-close" type="button" aria-label="Close"></button>
 </section>
+
+<script src="js/login.js"></script>
+<script src="js/map.js"></script>
 
 </body>
 </html>
