--- a/product.html
+++ b/product.html
@@ -107,7 +107,7 @@
             <p>
                 Barbershop Borodinski <br>
                 Address: 1651 Willard Road, Latriceshire, FL 48221 <br>
-                <a class="footer-address" href="blank.html">Directions</a><br>
+                <a class="footer-address contacts-button-map" href="blank.html">Directions</a><br>
                 Phone: <a class="footer-phone" href="tel:+17348957190">+1 734-895-7190</a>
             </p>
         </section>
@@ -176,13 +176,16 @@
         </p>
         <button class="button" type="submit">Log In</button>
     </form>
-    <button class="modal-close" type="button">Close</button>
+    <button class="modal-close" type="button" aria-label="Close"></button>
 </section>
 <section class="modal modal-map">
-    <h2>Directions</h2>
-    <!--    map is going to be here-->
-    <button class="modal-close" type="button">Close</button>
+    <h2 class="visually-hidden">Directions</h2>
+    <img src="images/map.png" width="766" height="560" alt="">
+    <button class="modal-close" type="button" aria-label="Close"></button>
 </section>
+
+<script src="js/login.js"></script>
+<script src="js/map.js"></script>
 
 </body>
 </html>
